@@ -93,6 +93,9 @@ from _RegExpName import RegExpName
 from _MatchIdOf import MatchIdOf
 from _RegExpIdOf import RegExpIdOf
 
+# This is the name->class storage for private rule classes
+private = {}
+
 #-------------------------------------------------------------------------
 #
 # This is used by Custom Filter Editor tool
@@ -156,4 +159,5 @@ editor_rule_list = [
 ]
 
 def register(rule):
+    private[rule.__name__] = rule
     editor_rule_list.append(rule)
