@@ -91,15 +91,21 @@ class FilterParser(handler.ContentHandler):
                 except (ImportError, NameError, AttributeError ):
                     # Now try to use name from Rules.Namespace
                     mc_match = save_name.split('.')
+                    last_name = mc_match[-1]
                     try:
                         exec 'self.r = Rules.%s.%s' % (
-                            self.namespace,mc_match[-1])
-                    except (ImportError, NameError ):
-                        print "ERROR: Filter rule '%s' in "\
-                              "filter '%s' not found!"\
-                              % (save_name,self.f.get_name())
-                        self.r = None
-                        return
+                            self.namespace,last_name)
+                    except (ImportError, NameError, AttributeError ):
+                        # Now try the private rule
+                        try:
+                            exec "self.r = Rules.%s.private['%s']" % (
+                                self.namespace,last_name)
+                        except KeyError:
+                            print "ERROR: Filter rule '%s' in "\
+                                  "filter '%s' not found!"\
+                                  % (save_name,self.f.get_name())
+                            self.r = None
+                            return
             self.a = []
         elif tag == "arg":
             self.a.append(attrs['value'])
