@@ -1,3 +1,9 @@
+2006-08-26  Alex Roitman  <shura@gramps-project.org>
+	* src/Filters/Rules/Person/__init__.py (register): Add dictionary
+	for private rules.
+	* src/Filters/_FilterParser.py (startElement): Support parsing for
+	private rules.
+
 2006-08-26  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.get_name_group_mapping): convert
 	group as name used as a key back to unicode (bug #389)
